# nablafx

./: .gitignore  CLAUDE.md  README.md  UPDATES.md  environment.yml  environment_temp-for-rnl.yaml  pyproject.toml  requirements.txt  requirements_temp-for-rnl.txt  setup.sh
cfg-new/trainer/: trainer_bb.yaml
cfg/data/: data-param_marshall-jvm410h-ch-od1_test.yaml  data-param_marshall-jvm410h-ch-od1_trainval copy.yaml  data-param_multidrive-ffuzz_test.yaml  data-param_multidrive-ffuzz_trainval.yaml  data_ampeg-optocomp_test.yaml  data_ampeg-optocomp_trainval.yaml  data_arturia-revspring636preamp_test.yaml  data_blackstar-ht1-ch-od_test.yaml  (+32 more)
nablafx/: controllers.py  data.py  loss.py  models.py  plotting.py  processors.py  system.py
nnlafx/: controllers.py  data.py  dsp.py  gcn.py
scripts/: fad.py  main.py  pretrain.py  rnl_find_weights.py  test.sh  train_bb.sh  train_gb.sh  wandb_sync_runs.sh
tests/: test_datamodule.py  test_dataset.py  test_lstm.py  test_proc_and_contr.py  test_s4.py  test_tcn.py
tests-code/: example_weighted_multi_loss_configs.yaml
weights/: static_fir_filter_t128-h32-l5.pt  static_fir_filter_t256-h16-l5.pt  static_fir_filter_t256-h32-l3.pt  static_fir_filter_t256-h32-l4.pt  static_fir_filter_t256-h32-l5.pt  static_fir_filter_t256-h32-l6.pt  static_fir_filter_t64-h32-l3.pt  static_fir_filter_t64-h32-l5.pt  static_mlp_nonlinearity_h16-l3_tanh.pt  static_mlp_nonlinearity_h2-l3_tanh.pt  static_mlp_nonlinearity_h32-l3_tanh.pt  static_mlp_nonlinearity_h4-l3_tanh.pt  static_mlp_nonlinearity_h64-l3_tanh.pt  static_mlp_nonlinearity_h8-l3_tanh.pt
(+99 files in other folders)
